--- a/default.css
+++ b/default.css
@@ -26,6 +26,7 @@ body * {
   transition: 0.3s;
 }
 
+a,
 h1,
 h2,
 h3,
@@ -343,7 +344,7 @@ h6 {
 .post-wrapper {
   display: grid;
   grid-template-columns: repeat(auto-fit, 320px);
-  gap: 20px;
+  gap: 100px;
   justify-content: center;
   padding-bottom: 50px;
 }
@@ -353,28 +354,54 @@ h6 {
   -webkit-box-shadow: -2px 7px 21px -9px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: -2px 7px 21px -9px rgba(0, 0, 0, 0.75);
   box-shadow: -2px 7px 21px -9px rgba(0, 0, 0, 0.75);
+  border-radius: 20px;
 }
 
 .thumbnail {
   display: block;
   width: 100%;
-  height: 180px;
+  height: 280px;
   object-fit: cover;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
 }
 
 .post-preview {
   background-color: #fff;
   padding: 15px;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  height: 170px;
 }
 
 .post-title {
   color: black;
+  font-size: 20px;
   margin: 0;
 }
 
 .post-intro {
   color: #4b5156;
   font-size: 14px;
+}
+
+.code-button {
+  color: white;
+  font-size: 20px;
+}
+
+.code-button-container {
+  background-color: black;
+  width: 100px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+}
+
+.code-button-container:hover {
+  background-color: purple;
 }
 
 #contact-form {
