--- a/default.css
+++ b/default.css
@@ -180,7 +180,6 @@ h6 {
 #profile_pic {
   display: block;
   margin: 0 auto;
-
   height: 200px;
   width: 200px;
   object-fit: cover;
@@ -210,7 +209,7 @@ h6 {
 }
 
 .theme-dot:hover {
-  border-width: 5px;
+  border: 2px solid gray;
 }
 
 #light-mode {
@@ -341,6 +340,46 @@ h6 {
   width: 100%;
 }
 
+.post-container {
+  width: 380px;
+  background-color: white;
+  border-radius: 20px;
+  border: 1px solid var(--borderColor);
+}
+
+.post-container:hover {
+  box-shadow: -10px 10px 10px rgba(0, 0, 0, 0.4);
+}
+
+.image-container {
+  height: 280px;
+  position: relative;
+}
+
+.project-image,
+.project-image-hover {
+  width: 100%;
+  height: 280px;
+  object-fit: cover;
+  position: absolute;
+  border-radius: 20px 20px 0 0;
+}
+.project-image {
+  z-index: 1;
+}
+
+.project-image-hover {
+  z-index: 0;
+}
+
+.project-image:hover {
+  opacity: 0;
+}
+
+.post-info-container {
+  padding: 20px;
+}
+
 .post-wrapper {
   display: grid;
   grid-template-columns: repeat(auto-fit, 320px);
@@ -349,35 +388,11 @@ h6 {
   padding-bottom: 50px;
 }
 
-.post {
-  border: 1px solid var(--borderColor);
-  -webkit-box-shadow: -2px 7px 21px -9px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: -2px 7px 21px -9px rgba(0, 0, 0, 0.75);
-  box-shadow: -2px 7px 21px -9px rgba(0, 0, 0, 0.75);
-  border-radius: 20px;
-}
-
-.thumbnail {
-  display: block;
-  width: 100%;
-  height: 280px;
-  object-fit: cover;
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
-}
-
-.post-preview {
-  background-color: #fff;
-  padding: 15px;
-  border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 20px;
-  height: 170px;
-}
-
 .post-title {
   color: black;
   font-size: 20px;
   margin: 0;
+  width: 100%;
 }
 
 .post-intro {
